--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table>
     <tr>
-        <td><img src=rockleepng.png alt="An Image of Rock Lee"</td>
+        <td><img src="rockleepng.png" alt="An Image of Rock Lee"</td>
         <td>
             <h1>Rock Lee</h1>
             <strong>Handsome Devil of the Leaf Village</strong><br>
