--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Rock Lee 🍃</title>
 </head>
 <body>
@@ -15,16 +17,15 @@
     </tr>
     </table>
     <br>
-    <hr size="3" noshade>
+    <hr>
     <ul type="disc">
     <li>
-    <strong>Rank-</strong>
-    <a href="https://naruto.fandom.com/wiki/J%C5%8Dnin">Jonin</a>
+    <strong><h3>Rank- <a href="https://naruto.fandom.com/wiki/J%C5%8Dnin">Jonin</a></h3> </strong>
     </li>
     <br>
     <br>
         <li>
-    <strong>My Skills</strong>
+    <strong><h3>My Skills</h3></strong>
     <table border="1">
         <tr>
             <td>
@@ -70,9 +71,10 @@
         </tr>
     </table>
         </li>
-    <br>
+        <br>
+        
     <li>
-    <strong>My Strongest Fighting Techniques</strong><br>
+    <strong><h3>My Strongest Fighting Techniques</h3></strong>
     (in increasing order of strength)<br>
     <ol type="i">
         <li>Leaf Hurricane</li>
@@ -86,9 +88,10 @@
     </li>
     </ol>
     <li>
-        <a href="bestfights.html"><strong>My Best Fights</strong></a>
+        <a href="bestfights.html"><strong><h3> My Best Fights</h3></strong></a>
     </li>
     </ul>
-    <a href="contactme.html"><h3>Contact me</h3></a>
+    <hr>
+    <a href="contactme.html"><h2>Contact me</h2></a>
 </body>
 </html>
